# budget-explorer

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  profile.rs
src/ai/: agent.rs  goal.rs  mod.rs  ollama.rs
src/tools/: mod.rs
src/ynab/: mod.rs  types.rs
tests/: README.md
