[package]
name = "budget-explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "budget-explorer"
path = "src/main.rs"

[lib]
name = "budget_explorer"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async stream utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Date/time (for profile timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "5"

# Error handling
thiserror = "2"

[dev-dependencies]
# Mock HTTP for testing
wiremock = "0.6"
# Temp directories for file I/O tests
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
